# pointattn1120

./: .gitignore  dataset.py  myboard.py  mylogger.py  pyproject.toml  save_pcd.py  train_test.py  visualize.py
cfgs/: PointAttN.yaml
models/: PointAttN.py
runs/PointAttN_cd_debug_c3d/ep_25-11-21_152814/: run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-train_batch_loss.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-train_epoch_avg_loss.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-train_fine_loss.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-train_learning_rate.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-val_cd_p.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-val_cd_p_coarse.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-val_cd_t.csv  run-PointAttN_cd_debug_c3d_ep_25-11-21_152814-tag-val_cd_t_coarse.csv
utils/: model_utils.py  train_utils.py
utils/ChamferDistancePytorch/chamfer3D/: setup.py
utils/ChamferDistancePytorch/chamfer3D/chamfer_3D/: __init__.py  dist_chamfer_3D.py
utils/mm3d_pn2/: setup.py  version.py
utils/mm3d_pn2/ops/: __init__.py
utils/mm3d_pn2/ops/furthest_point_sample/: __init__.py  furthest_point_sample_ext.cp38-win_amd64.pyd
utils/mm3d_pn2/ops/furthest_point_sample/src/: furthest_point_sample.cpp
utils/mm3d_pn2/ops/gather_points/: gather_points_ext.cp38-win_amd64.pyd
utils/mm3d_pn2/ops/gather_points/src/: gather_points.cpp
